--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,7 +1,7 @@
 <ul class="list-group songs">
-  {{#each model as |song|}}
-    <li class="list-group-item">
-      {{song.title}} by <em>{{song.band}}</em>
+  {{#each model.songs as |song|}}
+    <li class="list-group-item song">
+      {{song.title}}
       <span class="rating pull-right">{{song.rating}}</span>
     </li>
   {{/each}}
