--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -3,10 +3,11 @@
     {{input type="text" class="new-song" placeholder="New song" value=title}}
     <button class="btn btn-primary btn-sm new-song-button" {{action "createSong"}}>Add</button>
   </li>
+
   {{#each model.songs as |song|}}
     <li class="list-group-item song">
       {{song.title}}
-      <span class="rating pull-right">{{song.rating}}</span>
+      {{star-rating item=song rating=song.rating on-click=(action "updateRating")}}
     </li>
   {{/each}}
 </ul>
